ParkingApp/app-reservas/k8s/1-namespace.yml
apiVersion: v1
kind: Namespace
metadata:
  name: reservas

# Aplicar con: kubectl apply -f 1-namespace.yml
