ParkingApp/app-reservas/k8s/5-booking-service.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: booking-service
  namespace: reservas
spec:
  replicas: 1
  selector:
    matchLabels:
      app: booking-service
  template:
    metadata:
      labels:
        app: booking-service
    spec:
      containers:
        - name: booking-service
          image: booking-service:latest
          imagePullPolicy: Never
          ports:
            - containerPort: 5000
---
apiVersion: v1
kind: Service
metadata:
  name: booking-service
  namespace: reservas
spec:
  selector:
    app: booking-service
  ports:
    - port: 5000
      targetPort: 5000
