ParkingApp/app-reservas/k8s/6-notification-service.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: notification-service
  namespace: reservas
spec:
  replicas: 1
  selector:
    matchLabels:
      app: notification-service
  template:
    metadata:
      labels:
        app: notification-service
    spec:
      containers:
        - name: notification-service
          image: notification-service:latest
          imagePullPolicy: Never
          ports:
            - containerPort: 5002
---
apiVersion: v1
kind: Service
metadata:
  name: notification-service
  namespace: reservas
spec:
  selector:
    app: notification-service
  ports:
    - port: 5002
      targetPort: 5002
