ParkingApp/app-reservas/k8s/7-user-service.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: user-service
  namespace: reservas
spec:
  replicas: 1
  selector:
    matchLabels:
      app: user-service
  template:
    metadata:
      labels:
        app: user-service
    spec:
      containers:
        - name: user-service
          image: user-service:latest
          imagePullPolicy: Never
          ports:
            - containerPort: 5003
---
apiVersion: v1
kind: Service
metadata:
  name: user-service
  namespace: reservas
spec:
  selector:
    app: user-service
  ports:
    - port: 5003
      targetPort: 5003
